[package]
name = "saypyu"
version = "0.1.0"
edition = "2021"
authors = ["NotAFlyingGoose"]
license = "GPL-3.0-only"
license-file = "LICENSE"
description = "Converts complex and hard to use International Phonetic Alphabet (IPA) pronunciations into the extremely readable and usable SaypYu phonetic alphabet"
repository = "https://github.com/NotAFlyingGoose/saypyu"
readme = "README.md"
keywords = ["saypyu", "ipa", "pronunciation"]
exclude = [
    "ipa_to_saypyu.test",
]

[dependencies]
