[package]
name = "saypyu"
version = "0.1.0"
edition = "2021"
authors = ["NotAFlyingGoose"]
license = "GPL-3.0-only"
description = "Converts complex and hard to use International Phonetic Alphabet (IPA) pronunciations into the very readable and easy to use SaypYu phonetic alphabet"
repository = "https://github.com/NotAFlyingGoose/saypyu"
readme = "README.md"
keywords = ["saypyu", "ipa", "pronunciation"]
exclude = [
    "ipa_to_saypyu.test",
]

[dependencies]
